--- a/pik_client_svg/index.html
+++ b/pik_client_svg/index.html
@@ -17,19 +17,29 @@
 <script type="text/javascript" src='script.js'></script>
 <script type="text/template" id="template-tooltip">
 	<div class="tooltip <%= tooltipClass.map(function(x){return 'tooltip-'+x}).join(' ') %>">
-		<p class="title">
-			<%= title %>
-		</p>
-		<p class="address">
-			<%= address %>
-		</p>
+		<a href="<%= url %>">
+			<p class="title">
+				<%= title %>
+			</p>
+			<p class="address">
+				<%= address %>
+			</p>
+		</a>
 	</div>
 </script>
 
 
 <style type="text/css">
+	#canvas path[id ^= pathId] {
+		cursor: pointer; cursor: hand;
+	}
 	.tooltip {
 		padding: 0;
+	}
+	.tooltip a {
+		text-decoration: none;
+		cursor: pointer;
+		cursor: hand;
 	}
 	.tooltip .title {
 		padding: 0.2em 1em;
