--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
 
         <section id="main_content">
           <p>Test</p>
+          <a href="http://dagron.github.io/pik_client_svg/">house</a>
         </section>
 
         <footer>
