--- a/issue_manuall.html
+++ b/issue_manuall.html
@@ -4,10 +4,10 @@
 	<title></title>
 	<meta charset="utf-8">
 	<!-- Latest compiled and minified CSS -->
-	<link rel="stylesheet" href="static/build/css/bootstrap.min.css" >
+	<link rel="stylesheet" href="static/build/css/bootstrap.css" >
 
 	<!-- Optional theme -->
-	<link rel="stylesheet" href="static/build/css/bootstrap-theme.min.css">
+	<link rel="stylesheet" href="static/build/css/bootstrap-theme.css">
 
 	<link rel="stylesheet" href="static/build/css/ds-diget.css" >
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
